# rpi5-rp1-spi

./: .gitignore  CMakeLists.txt  README.md
pico/: pi_pico_commands.h  spi_slave.c  spi_slave.h  spi_slave_02.c  spi_slave_02.uf2
src/: pi_pico_commands.h  rp1-regs.h  rp1-spi-regs.h  rp1-spi-util.c  rp1-spi-util.h  rp1-spi.c  rp1-spi.h  rpi5-rp1-spi.c
